fix navbar overlap-x

--- a/app/globals.css
+++ b/app/globals.css
@@ -23,11 +23,14 @@ p > a {
 /* nav styles */
 nav {
     @apply
+    w-[98%]
     pb-4
     border-b-2 border-gray-200
-    flex items-center gap-5
-    my-10 mx-auto
-    max-w-5xl;
+    flex items-center gap-2.5
+    my-10 mx-auto;
+}
+nav h1 {
+    @apply text-base;
 }
 nav a, nav span {
     @apply text-gray-500;
@@ -37,6 +40,12 @@ nav a:hover {
 }
 main nav {
     @apply border-0;
+}
+.navlinks {
+    @apply text-xs;
+}
+.logo {
+    @apply w-10;
 }
 
 /* button styles */
